Added a note about flex-shrink and height

--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@ li::before {
                 <div class="flex-basis-container__item fbci_23">width: 250px;</div>
                 <div class="flex-basis-container__item fbci_24">width: 250px;</div>
             </div>
+
+            <p>Some other noteable mentions:</p>
+            <p>* <code>flex-basis: auto;</code> essentially just defaults back to the <code>width</code> property. If none given, then the element displays with its calculated width.</p>
+            <p>* <code>flex-shrink</code> works on the horizontal axis, not the vertical axis. <code>height</code> does not obey <code>flex-shrink</code></p>
+            
         </main>
     </body>
 </html>
